# mkdocs-publisher.github.io

./: .pre-commit-config.yaml  .yamllint.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: deploy-pages.yml
assets/javascripts/: mathjax.js
assets/javascripts/lunr/: wordcut.js
assets/stylesheets/: publisher.css
blog/: index.html
blog/archive/2023/: index.html
blog/archive/2024/: index.html
blog/categories/release/: index.html
blog/index-1/: index.html
blog/index-2/: index.html
blog/tags/v0.x/: index.html
blog/tags/v1.x/: index.html
blog/v010/: index.html
blog/v020/: index.html
blog/v030/: index.html
blog/v040/: index.html
blog/v041/: index.html
blog/v050/: index.html
blog/v100/: index.html
blog/v110/: index.html
blog/v111/: index.html
blog/v120/: index.html
blog/v130/: index.html
blog/v131/: index.html
blog/v140/: index.html
blog/v141/: index.html
blog/v142/: index.html
development/changelog/: index.html
development/development/: index.html
development/other/backlog/: index.html
development/versioning/: index.html
index-0/: index.html
index-1/: index.html
index-2/: index.html
mkdocs_publisher_docs/: 01_home.md  README.md
mkdocs_publisher_docs/04_insiders/: README.md
mkdocs_publisher_docs/06_blog/: v140-redirects.md  v141.md  v142.md
mkdocs_publisher_docs/07_dev/: 01_changelog.md
overrides/partials/: copyright.html
search/: search_index.json
setup/development/pub-debugger/: index.html
setup/installation/: index.html
(+7 files in other folders)
